--- a/templates/home.html
+++ b/templates/home.html
@@ -1,107 +1,149 @@
 <html>
 <body>
     <div class="login">
-       <h1>Student Exam Performance Indicator</h1>
+       <h1>Zomato delivery Time Prediction</h1>
    
        <form action="{{ url_for('predict_datapoint')}}" method="post">
-        <h1>
-            <legend>Delivery Time Prediction</legend>
-        </h1>
-        <div class="mb-3">
-            <label class="form-label">Gender</label>
-            <select class="form-control" name="gender" placeholder="Enter you Gender" required>
-                <option class="placeholder" selected disabled value="">Select your Gender</option>
-                <option value="male">
-                    Male
+        
+        <div>
+            <label class="form-label">Delivery Person Age</label>
+            <input class="form-control" type="number" name="Delivery_person_Age"
+                placeholder="Enter Age of Delivery Person" min='0' max='100' />
+        </div>
+
+        <div>
+            <label class="form-label">Delivery Person Ratings</label>
+            <input class="form-control" type="number" name="Delivery_person_Ratings"
+                placeholder="Enter Rating of Person" min='0' max='5' step='0.1' />
+        </div>
+
+        <div>
+            <label class="form-label">Weather Conditions</label>
+            <select class="form-control" name="Weatherconditions"
+                placeholder="Enter the Weather Conditions" required>
+                <option class="placeholder" selected disabled value="">Select Weather Conditions</option>
+                <option value="Fog">
+                    Foggy
                 </option>
-                <option value="female">
-                    Female
+                <option value="Stormy">
+                    Stormy
+                </option>
+                <option value="Cloudy">
+                    Cloudy
+                </option>
+                <option value="Sandstorms">
+                    Sandstorms
+                </option>
+                <option value="Windy">
+                    Windy
+                </option>
+                <option value="Sunny">
+                    Sunny
                 </option>
             </select>
         </div>
-        <div class="mb-3">
-            <label class="form-label">Race or Ethnicity</label>
-            <select class="form-control" name="ethnicity" placeholder="Enter you ethnicity" required>
-                <option class="placeholder" selected disabled value="">Select Ethnicity</option>
-                <option value="group A">
-                    Group A
+
+        <div>
+            <label class="form-label">Road Traffic</label>
+            <select class="form-control" name="Road_traffic_density" placeholder="Traffic" required>
+                <option class="placeholder" selected disabled value="">Select Road Traffic type</option>
+                <option value="Low">
+                    Low
                 </option>
-                <option value="group B">
-                    Group B
+                <option value="Jam">
+                    Jam
                 </option>
-                <option value="group C">
-                    Group C
+                <option value="Medium">
+                    Medium
                 </option>
-                <option value="group D">
-                    Group D
-                </option>
-                <option value="group E">
-                    Group E
+                <option value="High">
+                    High
                 </option>
             </select>
         </div>
-        <div class="mb-3">
-            <label class="form-label">Parental Level of Education</label>
-            <select class="form-control" name="parental_level_of_education"
-                placeholder="Enter you Parent Education" required>
-                <option class="placeholder" selected disabled value="">Select Parent Education</option>
-                <option value="associate's degree">
-                    associate's degree
-                </option>
-                <option value="bachelor's degree">
-                    bachelor's degree
-                </option>
-                <option value="high school">
-                    high school
-                </option>
-                <option value="master's degree">
-                    master's degree
-                </option>
-                <option value="some college">
-                    some college
-                </option>
-                <option value="some high school">
-                    some high school
-                </option>
-            </select>
+
+        <div>
+            <label class="form-label">Condtion of vehicle</label>
+            <input class="form-control" type="number" name="Vehicle_condition"
+                placeholder="Condtion of Vehicle" min='0' max='3' step='1'/>
         </div>
-        <div class="mb-3">
-            <label class="form-label">Lunch Type</label>
-            <select class="form-control" name="lunch" placeholder="Enter you Lunch" required>
-                <option class="placeholder" selected disabled value="">Select Lunch Type</option>
-                <option value="free/reduced">
-                    free/reduced
+        
+        <div>
+            <label class="form-label">Type of Order</label>
+            <select class="form-control" name="Type_of_order" placeholder="Order Type" required>
+                <option class="placeholder">Select the Order Type</option>
+                <option value="Snacks">
+                    Snacks
                 </option>
-                <option value="standard">
-                    standard
+                <option value="Meal">
+                    Meal
                 </option>
-            </select>
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Test preparation Course</label>
-            <select class="form-control" name="test_preparation_course" placeholder="Enter you Course"
-                required>
-                <option class="placeholder" selected disabled value="">Select Test_course</option>
-                <option value="none">
-                    None
+                <option value="Drinks">
+                    Drinks
                 </option>
-                <option value="completed">
-                    Completed
+                <option value="Buffet">
+                    Buffet
                 </option>
-            </select>
         </div>
-        <div class="mb-3">
-            <label class="form-label">Writing Score out of 100</label>
-            <input class="form-control" type="number" name="reading_score"
-                placeholder="Enter your Reading score" min='0' max='100' />
+
+        <div>
+            <label class="form-label">Type of Vehicle</label>
+            <select class="form-control" name="Type_of_vehicle" placeholder="Type of Vehicle" required>
+                <option class="placeholder">Select the Vehicle Type</option>
+                <option value="motorcycle">
+                    Motorcycle
+                </option>
+                <option value="scooter">
+                    Scooter
+                </option>
+                <option value="electric_scooter">
+                    Electric Scooter
+                </option>
+                <option value="bicycle">
+                    Bicycle
+                </option>
         </div>
-        <div class="mb-3">
-            <label class="form-label">Reading Score out of 100</label>
-            <input class="form-control" type="number" name="writing_score"
-                placeholder="Enter your Reading Score" min='0' max='100' />
+        
+        <div>
+            <label class="form-label">Multiple Deliveries</label>
+            <input class="form-control" type="number" name="multiple_deliveries"
+                placeholder="Multiple Deliveries" min='0' max='3' step='1'/>
         </div>
-        <div class="mb-3">
-            <input class="btn btn-primary" type="submit" value="Predict your Maths Score" required />
+
+        <div>
+            <label class="form-label">Festival</label>
+            <select class="form-control" name="Festival" placeholder="Festival?" required>
+                <option class="placeholder" selected disabled value="">Festival</option>
+                <option value="Yes">
+                    Yes
+                </option>
+                <option value="No">
+                    No
+                </option>
+        </div>
+
+        <div>
+            <label class="form-label">City</label>
+            <select class="form-control" name="City" placeholder="City" required>
+                <option class="placeholder" selected disabled value="">City</option>
+                <option value="Metropolitian">
+                    Metropolitian
+                </option>
+                <option value="Urban">
+                    Urban
+                </option>
+                <option value="Semi-Urban">
+                    Semi-Urban
+        </div>
+
+        <div>
+            <label class="form-label">Distance </label>
+            <input class="form-control" type="number" name="Distance"
+                placeholder="Distance to home" min='0' max='25'/>
+        </div>
+
+        <div>
+            <input class="btn btn-primary" type="submit" value="Predict the time taken" required />
         </div>
     </form>
     <h2>
